Update RollHoursTest.java
Modify for JDK 17